fixed table widths

--- a/distributor.html
+++ b/distributor.html
@@ -36,19 +36,19 @@
 <table id="bundle" bgcolor="gray">
 	<caption>Animation Controls</caption>
 <tr>
-	<td id="animator" colspan="7" bgcolor="black">
+	<td id="animator" width="40%" bgcolor="black">
 		run<br /><br /><br />
 		<button id="pause" onclick="eRun(event)">STOP</button>
 		or
 		<button id="reload" onclick="location.reload (true)">reload</button>
 	</td><td width="10px">
-	</td><td colspan="2" bgcolor="black" valign="top">
+	</td><td width="20%" bgcolor="black" valign="top">
 		delay(ms)<br /><br /><br />
 		<button id="neg" onclick="eFaster (event)">-</button>
 		<b id="interval"></b>
 		<button id="pos" onclick="eSlower (event)">+</button>
 	</td><td width="10px">
-	</td><td colspan="2" bgcolor="black" valign="top">
+	</td><td width="20%" bgcolor="black" valign="top">
 		tonus<br /><b id="state">None</b><br /><br />
 		<button id="pown" onclick="eSofter (event)">-</button>
 		<b id="strength">2</b>
