key labels on all actions

--- a/distributor.html
+++ b/distributor.html
@@ -47,21 +47,21 @@
 		<tr>
 			<td id="animator" width="40%" bgcolor="black">
 				run<br /><br /><br />
-				<button id="pause" onclick="eRun(event)">Pause</button>
+				<button id="pause" onclick="eRun(event)"><u>P</u>ause</button>
 				or
-				<button id="reload" onclick="eReload(event)">Fresh</button>
+				<button id="reload" onclick="eFresh(event)"><u>F</u>resh</button>
 			</td><td width="10%">
 			</td><td width="20%" bgcolor="black" valign="top">
 				delay(ms)<br /><br /><br />
-				<button id="neg" onclick="eFaster (event)">Less</button>
+				<button id="neg" onclick="eFaster (event)"><u>L</u>ess</button>
 				<b id="interval"></b>
-				<button id="pos" onclick="eSlower (event)">More</button>
+				<button id="pos" onclick="eSlower (event)"><u>M</u>ore</button>
 			</td><td width="10%">
 			</td><td width="20%" bgcolor="black" valign="top">
 				tonus<br /><b id="state">None</b><br /><br />
-				<button id="pown" onclick="eSofter (event)">Softer</button>
+				<button id="pown" onclick="eSofter (event)"><u>S</u>oft</button>
 				<b id="strength">2</b>
-				<button id="powp" onclick="eHarder (event)">Harder</button>
+				<button id="powp" onclick="eHarder (event)"><u>H</u>ard</button>
 		</tr>
 	</thead>
 	<tbody id="tbody"></tbody>
