key labels on all actions

--- a/distributor.html
+++ b/distributor.html
@@ -49,7 +49,7 @@
 				run<br /><br /><br />
 				<button id="pause" onclick="eRun(event)"><u>P</u>ause</button>
 				or
-				<button id="reload" onclick="eFresh(event)"><u>F</u>resh</button>
+				<button id="reload" onclick="eFresh(event)"><u>R</u>efresh</button>
 			</td><td width="10%">
 			</td><td width="20%" bgcolor="black" valign="top">
 				delay(ms)<br /><br /><br />
