re-organized screen real-estate

--- a/distributor.html
+++ b/distributor.html
@@ -31,18 +31,9 @@
 	<!-- 3333333333333333333333333333333333333333333333333333333333333333333 -->
 </table>
 
-<span><!-- info buttons/textarea -->
-	<!-- 4444444444444444444444444444444444444444444444444444444444444444444 -->
-	<br /><span id="buttons"></span>
-	<br /><textarea id="info" rows="12" cols="84" readonly>
-	Hover over the above buttons to show information in this area.
-	</textarea><br />
-	<!-- 4444444444444444444444444444444444444444444444444444444444444444444 -->
-</span>
-
 <table id="bundle" bgcolor="gray"><!-- animation controls/dispays -->
 	<!-- 5555555555555555555555555555555555555555555555555555555555555555555 -->
-	<caption>Animation Controls</caption>
+	<!-- <caption>Animation Controls</caption> -->
 	<thead>
 		<tr>
 			<td id="animator" width="40%" bgcolor="black">
@@ -73,6 +64,15 @@
 	<h3>Muscle Fiber Bundle</h3>
 	<canvas id="canvas"></canvas>
 	<!-- 6666666666666666666666666666666666666666666666666666666666666666666 -->
+</span>
+
+<span><!-- info buttons/textarea -->
+	<!-- 4444444444444444444444444444444444444444444444444444444444444444444 -->
+	<br /><span id="buttons"></span>
+	<br /><textarea id="info" rows="13" cols="84" readonly>
+	Hover over the above buttons to show information in this area.
+	</textarea><br />
+	<!-- 4444444444444444444444444444444444444444444444444444444444444444444 -->
 </span>
 
 	</div>
