re-organized screen real-estate

--- a/distributor.html
+++ b/distributor.html
@@ -31,19 +31,19 @@
 	<!-- 3333333333333333333333333333333333333333333333333333333333333333333 -->
 </table>
 
-<table id="bundle" bgcolor="gray"><!-- animation controls/dispays -->
+<table id="bundle" bgcolor="gray" width="100%"><!-- controls/dispays -->
 	<!-- 5555555555555555555555555555555555555555555555555555555555555555555 -->
 	<!-- <caption>Animation Controls</caption> -->
 	<thead>
 		<tr>
-			<td id="animator" width="40%" bgcolor="black">
+			<td id="animator" width="20%" bgcolor="black">
 				run<br /><br /><br />
 				<button id="pause" onclick="eRun(event)"><u>P</u>ause</button>
 				or
 				<button id="reload" onclick="eFresh(event)"><u>R</u>efresh</button>
 			</td><td width="10%">
 			</td><td width="20%" bgcolor="black" valign="top">
-				delay(ms)<br /><br /><br />
+				interval(ms)<br /><br /><br />
 				<button id="neg" onclick="eFaster (event)"><u>L</u>ess</button>
 				<b id="interval"></b>
 				<button id="pos" onclick="eSlower (event)"><u>M</u>ore</button>
