--- a/index.html
+++ b/index.html
@@ -29,6 +29,33 @@ with sample neuron and brain libraries
 		<nav>
 		<button id="reload" onclick="location.reload (true)">reload</button>
 		</nav>
+
+		<dl>
+<dt><a href="https://rawgit.com/jlettvin/gaze/master/index.html">
+Brain Building Kit&trade;
+</a></dt><dd>
+Home for new implementation.
+</dd>
+
+<dt><a href="https://rawgit.com/jlettvin/gaze/master/gaze.html">
+Gaze Tracking Reflex
+</a></dt><dd>
+A preliminary demonstration of a complete reflex arc.
+<br /><br />
+This visual model illustrates the full reflex arc needed to describe
+how attention is drawn to tiny moving features.
+</dd>
+
+<dt><a href="https://rawgit.com/jlettvin/gaze/master/distributor.html">
+Twitch Distributor Visualization
+</a></dt><dd>
+A finished demonstration for how muscles are driven.
+<br /><br />
+Evenly distributed twitch signals and variable tonus
+while avoiding exhausting individual twitch units.
+<dd>
+		</dl>
+
 		<table>
 			<tr><td><a href="gaze.html">1st model of reflex</a></td></tr>
 			<tr><td><a href="distributor.html">twitch visualizer</a></td></tr>
