--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ with sample neuron and brain libraries
 		<button id="reload" onclick="location.reload (true)">reload</button>
 		</nav>
 
-		<div align="left">
+		<span align="left">
 		<dl>
 <dt><a href="https://rawgit.com/jlettvin/gaze/master/index.html">
 Brain Building Kit&trade;
@@ -56,7 +56,7 @@ Evenly distributed twitch signals and variable tonus
 while avoiding exhausting individual twitch units.
 <dd>
 		</dl>
-		</div>
+		</span>
 
 		<table>
 			<tr><td><a href="gaze.html">1st model of reflex</a></td></tr>
