--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta   charset="utf-8" />
 	</head>
-	<body bgcolor="#ffffcc" align="center">
+	<body bgcolor="#ffffcc">
 		<header>
-			<table width="100%" bgcolor="white">
+			<table width="100%" bgcolor="white" align="center">
 				<tr><td align="left">
 				<big><big><big><b><i>
 					Brain Building Kit&trade;
@@ -28,7 +28,6 @@ with sample neuron and brain libraries
 		</header>
 		<nav>
 		<button id="reload" onclick="location.reload (true)">reload</button>
-		</nav>
 
 		<span align="left">
 		<dl>
@@ -65,6 +64,7 @@ while avoiding exhausting individual twitch units.
 			<tr><td></td><td></td></tr>
 		</table>
 		-->
+		</nav>
 
 		<table width="100%" bgcolor="white">
 			<tr><td>
