Slight aesthetic on BBK

--- a/distributor.html
+++ b/distributor.html
@@ -25,8 +25,6 @@
 		<a href="http://www.brainbuildingkit.com">
 			<i>Brain Building Kit&trade;</i>
 		</a>
-	</td></tr><tr><td class="copyright">
-		<i>Copyright&copy; 2018 Jonathan D. Lettvin, All Rights Reserved.</i>
 	</td></tr>
 	<!-- 3333333333333333333333333333333333333333333333333333333333333333333 -->
 </table>
@@ -76,6 +74,11 @@
 </span>
 
 	</div>
+	<hr >
+	<small><b class="copyright">
+		<i>Copyright&copy; 2018 Jonathan D. Lettvin, All Rights Reserved.</i>
+	</b></small>
+
 	<!-- 2222222222222222222222222222222222222222222222222222222222222222222 -->
 </body>
 
