--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 	<head>
 		<meta   charset="utf-8" />
+<style>
+table, td { border: 1px solid black; border-collapse: collapse; padding: 3px; }
+</style>
 	</head>
 	<body bgcolor="#ffffcc">
 		<header>
@@ -22,22 +25,20 @@ with sample neuron and brain libraries
 
 				</td></tr>
 			</table>
-			<small>
-				Copyright&copy; 2018 Jonathan D. Lettvin, All Rights Reserved
-			</small>
 		</header>
-		<nav>
+
+		<table>
+			<tr><td>
 		<button id="reload" onclick="location.reload (true)">reload</button>
 
-		<span align="left">
 		<dl>
-<dt><a href="https://rawgit.com/jlettvin/gaze/master/index.html">
+			<dt><a href="">
 Brain Building Kit&trade;
 </a></dt><dd>
 Home for new implementation.
 </dd>
 
-<dt><a href="https://rawgit.com/jlettvin/gaze/master/gaze.html">
+<dt><a href="gaze.html">
 Gaze Tracking Reflex
 </a></dt><dd>
 A preliminary demonstration of a complete reflex arc.
@@ -46,7 +47,7 @@ This visual model illustrates the full reflex arc needed to describe
 how attention is drawn to tiny moving features.
 </dd>
 
-<dt><a href="https://rawgit.com/jlettvin/gaze/master/distributor.html">
+<dt><a href="distributor.html">
 Twitch Distributor Visualization
 </a></dt><dd>
 A finished demonstration for how muscles are driven.
@@ -55,7 +56,6 @@ Evenly distributed twitch signals and variable tonus
 while avoiding exhausting individual twitch units.
 <dd>
 		</dl>
-		</span>
 
 		<!--
 		<table>
@@ -64,10 +64,8 @@ while avoiding exhausting individual twitch units.
 			<tr><td></td><td></td></tr>
 		</table>
 		-->
-		</nav>
+				</td><td bgcolor="white" width="80%">
 
-		<table width="100%" bgcolor="white">
-			<tr><td>
 			<h3>Why not put brains in your devices?</h3>
 			<span align="left" bgcolor="white">
 			<p>
@@ -90,6 +88,9 @@ With brains, your devices will work better than they ever have before.
 		</span>
 		<footer>
 			<hr />
+			<small><b bgcolor="white">
+				Copyright&copy; 2018 Jonathan D. Lettvin, All Rights Reserved
+			</b></small>
 		</footer>
 	</body>
 </html>
