--- a/gaze.html
+++ b/gaze.html
@@ -10,7 +10,8 @@
 		<script type   ="text/javascript" src ="gaze.pane.js"></script>
 		<script type   ="text/javascript" src ="gaze.js"></script>
 		<!--<script type   ="text/javascript" src ="pngmetadata.js"></script>-->
-		<link   type   ="text/css"        href="gaze.css" rel="stylesheet">
+		<link   type   ="text/css"        href="gaze.css" rel="stylesheet" />
+		<link   type=  "image/x-icon"    href="gaze.png" rel="shortcut icon" />
 	</head>
 	<body bgcolor="#ffffcc">
 		<h1>Verging on Hyperacuity</h1>
