--- a/distributor.html
+++ b/distributor.html
@@ -8,7 +8,8 @@
 	<meta charset="UTF-8">
 	<script type="text/javascript"  src="utility.js"></script>
 	<script type="text/javascript"  src="distributor.js"></script>
-	<link   type="text/css"        href="distributor.css" rel="stylesheet">
+	<link   type="text/css"        href="distributor.css" rel="stylesheet" />
+	<link   type="image/x-icon"    href="distributor.png" rel="shortcut icon" />
 	<!-- 1111111111111111111111111111111111111111111111111111111111111111111 -->
 </head>
 
