--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<meta   charset="utf-8" />
+		<link   type=  "image/x-icon"    href="BBKtm.png" rel="shortcut icon" />
 <style>
 table, td { border: 1px solid black; border-collapse: collapse; padding: 3px; }
 </style>
