experimenting with wiki markdown conversion

--- a/distributor.html
+++ b/distributor.html
@@ -7,9 +7,10 @@
 	<!-- 1111111111111111111111111111111111111111111111111111111111111111111 -->
 	<meta charset="UTF-8">
 	<script type="text/javascript"  src="utility.js"></script>
+	<script type="text/javascript"  src="wiki.js"></script>
 	<script type="text/javascript"  src="distributor.js"></script>
 	<link   type="text/css"        href="distributor.css" rel="stylesheet" />
-	<link   type="image/x-icon"    href="distributor.png" rel="shortcut icon" />
+	<link   type="image/x-icon"    href="distributor.png" rel="icon" />
 	<!-- 1111111111111111111111111111111111111111111111111111111111111111111 -->
 </head>
 
