--- a/gaze.html
+++ b/gaze.html
@@ -11,7 +11,7 @@
 		<script type   ="text/javascript" src ="gaze.js"></script>
 		<!--<script type   ="text/javascript" src ="pngmetadata.js"></script>-->
 		<link   type   ="text/css"        href="gaze.css" rel="stylesheet" />
-		<link   type=  "image/x-icon"    href="gaze.png" rel="shortcut icon" />
+		<link   type=  "image/x-icon"    href="gaze.png" rel="icon" />
 	</head>
 	<body bgcolor="#ffffcc">
 		<h1>Verging on Hyperacuity</h1>
@@ -84,6 +84,7 @@
 						<select id="figure 1a menu" onchange="eventSelect()">
 							<!-- selected option is needed to prime the pump -->
 							<option selected>None</option>
+							<b id="look"></b>
 						</select>
 					</td></tr><tr><td id="figure 1a text" class="info" bgcolor="#ffffff">
 					</td></tr><tr><td id="paneInfo" class="info" bgcolor="#ffffff">
