--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 	<head>
 		<meta   charset="utf-8" />
-		<link   type=  "image/x-icon"    href="BBKtm.png" rel="shortcut icon" />
+		<link   type   ="image/x-icon"    href="BBKtm.png" rel="icon" />
+		<script type   = "text/javascript" src="utility.js"></script>
+		<script type   ="text/javascript" src ="wiki.js"></script>
 <style>
 table, td { border: 1px solid black; border-collapse: collapse; padding: 3px; }
 </style>
@@ -67,23 +69,26 @@ while avoiding exhausting individual twitch units.
 		-->
 				</td><td bgcolor="white" width="80%">
 
-			<h3>Why not put brains in your devices?</h3>
 			<span align="left" bgcolor="white">
-			<p>
-Computers and dedicated signal processors currently don't solve problems that brains do. Brain processing paradoxes remain unsolved by the neurosciences and current disciplines such as neuromorphic engineering, neural nets, and AI; even for simple organisms like C. Elegans (302 neurons).
-			</p><p>
-Computers can solve problems that brains do. Devices can have fine economical sensorimotor reflexes, like animals do. However, a new mathematical foundation must be established to accomplish this. Brain Building Kit™ is in the process of establishing this.
-			</p><p>
-Unlike how animals with brains do it, many modern devices compensate low performance by using more sensors, actuators, processing, and power. These compensations add unwanted weight and waste much power. In addition, manufacturing defects and damage render these machines useless, driving up Quality Control costs and decreasing lifespan.
-			</p><p>
-By contrast, brains consume far less power to transduce, model, and transform; effecting distributed processing and predictive feedback to achieve results superior to modern devices. Also, they are relatively insensitive to defects and damage, rapidly redeploying neural pathways to achieve similar goals when injured.
-			</p><p>
-The promise of brains in devices includes greater economies, lower energy consumption, reliability under stress, and better assessment and control of situations. The Brain Building Kit™ produces functioning artificial brains that exhibit these paradoxical efficiencies.
-			</p><p>
-With the patent pending Brain Building Kit™, artificial brains can be built that compete well with organic brains.
-			</p><p>
-With brains, your devices will work better than they ever have before.
-			</p>
+				<div class="wiki">
+				<div class="wiki.src" hidden>
+== Why not put brains in your devices? ==
+^^^^
+___Computers and dedicated signal processors currently don't solve problems that brains do. Brain processing paradoxes remain unsolved by the neurosciences and current disciplines such as neuromorphic engineering, neural nets, and AI; even for simple organisms like C. Elegans (302 neurons).
+^^^^
+___Computers can solve problems that brains do. Devices can have fine economical sensorimotor reflexes, like animals do. However, a new mathematical foundation must be established to accomplish this. Brain Building Kit™ is in the process of establishing this.
+^^^^
+___Unlike how animals with brains do it, many modern devices compensate low performance by using more sensors, actuators, processing, and power. These compensations add unwanted weight and waste much power. In addition, manufacturing defects and damage render these machines useless, driving up Quality Control costs and decreasing lifespan.
+^^^^
+___By contrast, brains consume far less power to transduce, model, and transform; effecting distributed processing and predictive feedback to achieve results superior to modern devices. Also, they are relatively insensitive to defects and damage, rapidly redeploying neural pathways to achieve similar goals when injured.
+^^^^
+___The promise of brains in devices includes greater economies, lower energy consumption, reliability under stress, and better assessment and control of situations. The Brain Building Kit™ produces functioning artificial brains that exhibit these paradoxical efficiencies.
+^^^^
+___With the patent pending Brain Building Kit™, artificial brains can be built that compete well with organic brains.
+^^^^
+___With brains, your devices will work better than they ever have before.
+				</div>
+				</div>
 			</td></tr>
 		</table>
 		</span>
@@ -94,4 +99,7 @@ With brains, your devices will work better than they ever have before.
 			</b></small>
 		</footer>
 	</body>
+	<script type="text/javascript">
+		doWiki ();
+	</script>
 </html>
