--- a/distributor.html
+++ b/distributor.html
@@ -76,13 +76,12 @@
 </span>
 
 	</div>
-	<hr >
-	<small><b class="copyright">
-		<i>Copyright&copy; 2018 Jonathan D. Lettvin, All Rights Reserved.</i>
-	</b></small>
 
 	<!-- 2222222222222222222222222222222222222222222222222222222222222222222 -->
 </body>
 
+	<script type="text/javascript">
+		doFooter ();
+	</script>
 	<!-- 0000000000000000000000000000000000000000000000000000000000000000000 -->
 </html>
