Added ref to another rawgit

--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@ A finished demonstration for how muscles are driven.
 Evenly distributed twitch signals and variable tonus
 while avoiding exhausting individual twitch units.
 <dd>
+
+<dt><a href="https://rawgit.com/jlettvin/JYL/master/seen.movement.html">
+Seen Movement Visualization
+</a></dt><dd>
+A visualization of a significant experiment.
+<dd>
 		</dl>
 
 		<!--
@@ -83,6 +89,7 @@ ___With brains, your devices will work better than they ever have before.
 	</body>
 	<script type="text/javascript">
 		doWiki ();
+		doInfo ();
 		doFooter ();
 	</script>
 </html>
