Added off-page references

--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@ Seen Movement Visualization
 </a></dt><dd>
 A visualization of a significant experiment.
 <dd>
+
+<dt><a href="https://rawgit.com/jlettvin/Tubulin/master/bipolar.unique.path.html">
+A model retinal bipolar dendrite
+</a></dt><dd>
+<dd>
+
 		</dl>
 
 		<!--
