Added off-page references

--- a/index.html
+++ b/index.html
@@ -28,37 +28,45 @@ table, td { border: 1px solid black; border-collapse: collapse; padding: 3px; }
 			<dt><a href="">
 Brain Building Kit&trade;
 </a></dt><dd>
-Home for new implementation.
+Incomplete new code.
 </dd>
 
 <dt><a href="gaze.html">
 Gaze Tracking Reflex
 </a></dt><dd>
-A preliminary demonstration of a complete reflex arc.
+Early full reflex arc model.
+<!--
 <br /><br />
 This visual model illustrates the full reflex arc needed to describe
 how attention is drawn to tiny moving features.
+-->
 </dd>
 
 <dt><a href="distributor.html">
 Twitch Distributor Visualization
 </a></dt><dd>
+Muscle control
+<!--
 A finished demonstration for how muscles are driven.
 <br /><br />
 Evenly distributed twitch signals and variable tonus
 while avoiding exhausting individual twitch units.
-<dd>
+-->
+</dd>
 
 <dt><a href="https://rawgit.com/jlettvin/JYL/master/seen.movement.html">
 Seen Movement Visualization
 </a></dt><dd>
+Key frog experiment
+<!--
 A visualization of a significant experiment.
-<dd>
+-->
+</dd>
 
 <dt><a href="https://rawgit.com/jlettvin/Tubulin/master/bipolar.unique.path.html">
 A model retinal bipolar dendrite
 </a></dt><dd>
-<dd>
+</dd>
 
 		</dl>
 
