Added off-page references

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@ A visualization of a significant experiment.
 <dt><a href="https://rawgit.com/jlettvin/Tubulin/master/bipolar.unique.path.html">
 A model retinal bipolar dendrite
 </a></dt><dd>
+Detailed synthesis of tubulin strands.
 </dd>
 
 		</dl>
