Added off-page references

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ table, td { border: 1px solid black; border-collapse: collapse; padding: 3px; }
 		-->
 
 		<table>
-			<tr><td>
+			<tr><td valign="top">
 		<button id="reload" onclick="location.reload (true)">reload</button>
 
 		<dl>
@@ -66,7 +66,7 @@ A visualization of a significant experiment.
 <dt><a href="https://rawgit.com/jlettvin/Tubulin/master/bipolar.unique.path.html">
 A model retinal bipolar dendrite
 </a></dt><dd>
-Detailed synthesis of tubulin strands.
+Detailed model tubulin tree.
 </dd>
 
 		</dl>
