Added off-page references

--- a/index.html
+++ b/index.html
@@ -63,10 +63,13 @@ A visualization of a significant experiment.
 -->
 </dd>
 
+<dt><a href="https://rawgit.com/jlettvin/Tubulin/master/bipolar.shared.path.html">
+Model shared path dendrite
+</a></dt>
 <dt><a href="https://rawgit.com/jlettvin/Tubulin/master/bipolar.unique.path.html">
-A model retinal bipolar dendrite
+Model unique path dendrite
 </a></dt><dd>
-Detailed model tubulin tree.
+Tubulin trees (detailed).
 </dd>
 
 		</dl>
