Added off-page references

--- a/index.html
+++ b/index.html
@@ -24,21 +24,26 @@ table, td { border: 1px solid black; border-collapse: collapse; padding: 3px; }
 			<tr><td valign="top">
 		<button id="reload" onclick="location.reload (true)">reload</button>
 
-		<dl>
-			<dt><a href="">
-Brain Building Kit&trade;
-</a></dt><dd>
-Incomplete new code.
-</dd>
+<!--
+<br /><br />
+This visual model illustrates the full reflex arc needed to describe
+how attention is drawn to tiny moving features.
+-->
+
+<dl>
 
 <dt><a href="gaze.html">
 Gaze Tracking Reflex
 </a></dt><dd>
 Early full reflex arc model.
+</dd>
+
+<dt><a href="">
+Future platform
+</a></dt><dd>
+Incomplete new code.
 <!--
-<br /><br />
-This visual model illustrates the full reflex arc needed to describe
-how attention is drawn to tiny moving features.
+Brain Building Kit&trade;
 -->
 </dd>
 
