Added off-page references

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@ how attention is drawn to tiny moving features.
 <dl>
 
 <dt><a href="gaze.html">
-Gaze Tracking Reflex
+Tracking
 </a></dt><dd>
 Early full reflex arc model.
 </dd>
 
 <dt><a href="">
-Future platform
+Future
 </a></dt><dd>
 Incomplete new code.
 <!--
@@ -48,7 +48,7 @@ Brain Building Kit&trade;
 </dd>
 
 <dt><a href="distributor.html">
-Twitch Distributor Visualization
+Distributor
 </a></dt><dd>
 Muscle control
 <!--
@@ -60,7 +60,7 @@ while avoiding exhausting individual twitch units.
 </dd>
 
 <dt><a href="https://rawgit.com/jlettvin/JYL/master/seen.movement.html">
-Seen Movement Visualization
+Seen Movement
 </a></dt><dd>
 Key frog experiment
 <!--
@@ -69,10 +69,10 @@ A visualization of a significant experiment.
 </dd>
 
 <dt><a href="https://rawgit.com/jlettvin/Tubulin/master/bipolar.shared.path.html">
-Model shared path dendrite
+Shared tubulin
 </a></dt>
 <dt><a href="https://rawgit.com/jlettvin/Tubulin/master/bipolar.unique.path.html">
-Model unique path dendrite
+Unique tubulin
 </a></dt><dd>
 Tubulin trees (detailed).
 </dd>
