Added off-page references

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ how attention is drawn to tiny moving features.
 <dt><a href="gaze.html">
 Tracking
 </a></dt><dd>
-Early full reflex arc model.
+First full reflex arc.
 </dd>
 
 <dt><a href="">
